@@ -5,6 +5,8 @@ import org.springframework.stereotype.Service;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 @Service
@@ -12,7 +14,7 @@ import java.util.concurrent.CompletableFuture;
 public class DeviceControlService {
 
     // ────────────────────────────────────────────────
-    // WINDOWS – Exosqueleto Completo (Onipotência via CMD/PowerShell)
+    // WINDOWS – Exosqueleto Completo
     // ────────────────────────────────────────────────
     public String executeWindowsCommand(String command, boolean usePowerShell) {
         log.info("Executando Windows: {} (PowerShell: {})", command, usePowerShell);
@@ -24,23 +26,9 @@ public class DeviceControlService {
                 pb = new ProcessBuilder("cmd.exe", "/c", command);
             }
 
-            // Captura tanto stdout quanto stderr juntos
             pb.redirectErrorStream(true);
-
             Process process = pb.start();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            StringBuilder output = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                output.append(line).append("\n");
-            }
-
-            int exitCode = process.waitFor();
-            if (exitCode == 0) {
-                return "Sucesso:\n" + output.toString().trim();
-            } else {
-                return "Falha (código " + exitCode + "):\n" + output.toString().trim();
-            }
+            return readProcessOutput(process);
         } catch (Exception e) {
             log.error("Erro crítico no exosqueleto Windows", e);
             return "Erro ao invocar o exosqueleto: " + e.getMessage();
@@ -52,23 +40,22 @@ public class DeviceControlService {
     }
 
     // ────────────────────────────────────────────────
-    // ANDROID – Link Neural via ADB (controle total)
+    // ANDROID – Link Neural via ADB
     // ────────────────────────────────────────────────
     public String executeAdbCommand(String adbArgs) {
         log.info("ADB → {}", adbArgs);
         try {
-            Process process = Runtime.getRuntime().exec("adb " + adbArgs);
-            process.getOutputStream().close(); // evita bloqueio
+            // Refatorado para ProcessBuilder (evita depreciação do Runtime.exec)
+            List<String> fullCommand = new ArrayList<>();
+            fullCommand.add("adb");
+            // Divide os argumentos mantendo aspas se houver complexidade
+            fullCommand.addAll(List.of(adbArgs.split(" ")));
 
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            StringBuilder output = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                output.append(line).append("\n");
-            }
-
-            int exitCode = process.waitFor();
-            return (exitCode == 0 ? "OK" : "Falha (" + exitCode + ")") + ":\n" + output.toString().trim();
+            ProcessBuilder pb = new ProcessBuilder(fullCommand);
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
+            
+            return readProcessOutput(process);
         } catch (Exception e) {
             log.error("Falha no link neural Android", e);
             return "Erro ADB: " + e.getMessage();
@@ -83,7 +70,6 @@ public class DeviceControlService {
         String uri = "whatsapp://send?phone=" + number + "&text=" + message.replace(" ", "%20");
         String result = executeAdbCommand("shell am start -a android.intent.action.VIEW -d \"" + uri + "\"");
 
-        // Tenta enviar com delay + ENTER (melhor que tap fixo, pois coordenadas variam)
         try { Thread.sleep(2500); } catch (InterruptedException ignored) {}
         executeAdbCommand("shell input keyevent 66"); // ENTER
 
@@ -91,20 +77,19 @@ public class DeviceControlService {
     }
 
     public String inputAndroidText(String text) {
-        // Escapa espaços e aspas
         String escaped = text.replace("\"", "\\\"").replace(" ", "%s");
         return executeAdbCommand("shell input text \"" + escaped + "\"");
     }
 
     // ────────────────────────────────────────────────
-    // iOS – Sinal via Webhook / Atalhos (sem jailbreak)
+    // iOS – Sinal via Webhook / Atalhos
     // ────────────────────────────────────────────────
     public String triggerIosShortcut(String shortcutName, String webhookUrl) {
         log.info("Disparando Atalho iOS: {} via {}", shortcutName, webhookUrl);
         CompletableFuture.runAsync(() -> {
             try {
-                String cmd = "curl -s -X POST \"" + webhookUrl + "?shortcut=" + shortcutName + "\"";
-                Runtime.getRuntime().exec(cmd);
+                ProcessBuilder pb = new ProcessBuilder("curl", "-s", "-X", "POST", webhookUrl + "?shortcut=" + shortcutName);
+                pb.start();
             } catch (Exception e) {
                 log.error("Falha no webhook iOS", e);
             }
@@ -119,25 +104,35 @@ public class DeviceControlService {
         log.warn("!!! MODO DE DEFESA ATIVADO – LOCKDOWN TOTAL !!!");
         StringBuilder report = new StringBuilder("Relatório de Lockdown:\n");
 
-        // Windows – Bloqueio agressivo
         report.append("[Windows]\n");
         report.append(executeWindowsCommand("netsh advfirewall set allprofiles state on", false));
         report.append(executeWindowsCommand("netsh advfirewall firewall add rule name=\"GHOST_Block_Inbound\" dir=in action=block", false));
-        report.append(executeWindowsCommand("rundll32.exe user32.dll,LockWorkStation", false)); // Bloqueia tela imediatamente
+        report.append(executeWindowsCommand("rundll32.exe user32.dll,LockWorkStation", false));
         report.append(executeWindowsCommand("taskkill /F /IM chrome.exe /IM msedge.exe /IM firefox.exe /T", false));
 
-        // Android – Isolamento físico
-        report.append("[Android]\n");
+        report.append("\n[Android]\n");
         report.append(executeAdbCommand("shell svc wifi disable"));
         report.append(executeAdbCommand("shell svc bluetooth disable"));
         report.append(executeAdbCommand("shell am broadcast -a android.intent.action.AIRPLANE_MODE --ez state true"));
-        report.append(executeAdbCommand("shell input keyevent 26")); // Pressiona power → lock screen
+        report.append(executeAdbCommand("shell input keyevent 26")); 
 
-        // iOS – Via Atalho (desative Wi-Fi, Bluetooth, etc.)
-        report.append("[iOS]\n");
-        report.append(triggerIosShortcut("LockdownMode", "https://pushcut.io/seu-webhook-aqui")); // ← SUBSTITUA PELA URL REAL
+        report.append("\n[iOS]\n");
+        report.append(triggerIosShortcut("LockdownMode", "https://pushcut.io/seu-webhook-aqui"));
 
-        report.append("\nSistema em quarentena total. Acesso externo bloqueado.");
-        return report.toString();
+        return report.append("\nSistema em quarentena total.").toString();
+    }
+
+    // Método auxiliar para leitura de fluxo
+    private String readProcessOutput(Process process) throws Exception {
+        StringBuilder output = new StringBuilder();
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                output.append(line).append("\n");
+            }
+        }
+        int exitCode = process.waitFor();
+        String prefix = (exitCode == 0) ? "Sucesso" : "Falha (cod " + exitCode + ")";
+        return prefix + ":\n" + output.toString().trim();
     }
 }
